--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,9 +1,19 @@
 ---
+import Image from '~/components/common/Image.astro';
 import { SITE } from 'astrowind:config';
+import favIcon from '~/assets/favicons/favicon_socionomics.ico';
 ---
 
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <span
   class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
 >
-  🚀 {SITE?.name}
+  <!-- face: -->
+  <!-- <span class="material-icons">&#xE87C;</span>  {SITE?.name}    -->
+  <!-- group: -->
+  <span class="material-icons">&#xE7EF;</span>  {SITE?.name} 
+
+  <!-- 🫂    {SITE?.name}  --> 
+  
 </span>
