--- a/src/pages/[...blog]/[...page].astro
+++ b/src/pages/[...blog]/[...page].astro
@@ -38,9 +38,9 @@ const metadata = {
 <Layout metadata={metadata}>
   <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-4xl">
     <Headline
-      subtitle="A statically generated blog example with news, tutorials, resources and other interesting content related to AstroWind"
+      subtitle="Ein Blog zu <b> politischen </b>, <b> gesellschaftlichen </b> und <b> wirtschaftlichen </b> Themen der Schweiz. Ereignisse, Trends und Beobachtungen in und aus Europa und anderen Regionen der Welt können als Inspiration dienen."
     >
-      The Blog
+      Socionomics Blog
     </Headline>
     <BlogList posts={page.data} />
     <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
