delete index.astro (make backup)

--- a/src/pages/indexOrgMain.astro
+++ b/src/pages/indexOrgMain.astro
@@ -13,7 +13,7 @@ import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: 'Socionomics: Blog zu Gesellschaft, Politik und Ökonomie',
   ignoreTitleTemplate: true,
 };
 ---
@@ -32,7 +32,7 @@ const metadata = {
       },
       { text: 'Learn more', href: '#features' },
     ]}
-    image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
+    image={{ src: '~/assets/images/jose-martin-ramirez-carrasco-45sjAjSjArQ-unsplash_v2.jpg', alt: 'Socionomics index' }}
   >
     <Fragment slot="title">
       Free template for <span class="hidden xl:inline">creating websites with</span>
